--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,6 +13,14 @@
     font-size: 90px;
 }
 
+.content-btns {
+    display: flex;
+    flex-direction: row;
+    background-color: #333;
+    margin: 0;
+    overflow: hidden;
+}
+
 /* RWD
 ------------------------------------------- */
 @media screen and (max-width: 480px) {
